[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/level_manager.gd" type="Script" id=1]
[ext_resource path="res://assets/tiles/tiles.tres" type="TileSet" id=2]
[ext_resource path="res://assets/sprites/portal/black.png" type="Texture" id=3]
[ext_resource path="res://scenes/end_of_level_gui.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ship.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/level_finish_trigger.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sound/music/electric_sound_loop.ogg" type="AudioStream" id=7]
[ext_resource path="res://scripts/sequencing.gd" type="Script" id=8]

[sub_resource type="GDScript" id=2]

script/source = "extends VisibilityNotifier2D

func send():
	get_parent().bar.message(\"An ambush. They were expecting us.\")
"

[node name="lvl0" type="Node2D"]

script/script = ExtResource( 1 )
level_name = "A Rookie at Hell's Gates"
rail_path = "rail"
end_of_level_gui_path = "EndOfLevelGUI"
fade_path = "rail/hud/Fade"

[node name="TileMap" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 0, 4, 15, 4, 65536, 4, 65551, 4, 131072, 4, 131087, 4, 196608, 4, 196623, 4, 262144, 4, 262159, 4, 327680, 4, 327695, 4, 393216, 4, 393231, 4, 458752, 4, 458767, 4, 524288, 4, 524303, 4, 589824, 4, 589839, 4, 655360, 4, 655375, 4, 720896, 4, 720911, 4, 786432, 4, 786433, 4, 786434, 4, 786435, 4, 786436, 4, 786443, 4, 786444, 4, 786445, 4, 786446, 4, 786447, 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="EndLevelCover" type="Sprite" parent="."]

transform/pos = Vector2( 128, -3878 )
transform/scale = Vector2( 6.5, 5.08333 )
texture = ExtResource( 3 )

[node name="EndOfLevelGUI" parent="." instance=ExtResource( 4 )]

margin/top = -3968.0
margin/bottom = -3776.0

[node name="Blockers" type="Node2D" parent="."]

[node name="rail" parent="." instance=ExtResource( 5 )]

editor/display_folded = true
travel_y = 3968

[node name="ship" parent="rail"]

editor/display_folded = true

[node name="thruster" parent="rail/ship"]

frame = 1

[node name="Fade" parent="rail/hud"]

editor/display_folded = true

[node name="entities" type="Node2D" parent="."]

transform/pos = Vector2( 0, 10 )

[node name="LevelFinishTrigger" parent="." instance=ExtResource( 6 )]

transform/pos = Vector2( 120, -3792 )
transform/scale = Vector2( 5.125, 1 )

[node name="Music" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 7 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Sequencing" type="Node2D" parent="."]

script/script = ExtResource( 8 )
message_bar_path = null

[node name="Msg" type="VisibilityNotifier2D" parent="Sequencing"]

transform/pos = Vector2( 120, 0 )
rect = Rect2( -10, -10, 20, 20 )
script/script = SubResource( 2 )

[connection signal="finished" from="EndOfLevelGUI" to="." method="_on_EndOfLevelGUI_finished"]

[connection signal="rail_finished" from="rail" to="." method="_on_rail_rail_finished"]

[connection signal="level_finished" from="LevelFinishTrigger" to="." method="_on_LevelFinishTrigger_level_finished"]

[connection signal="enter_screen" from="Sequencing/Msg" to="Sequencing/Msg" method="send"]


[editable path="rail"]
[editable path="rail/hud/Fade"]
